@@ -127,7 +127,7 @@ public class PersistenceResourceTest {
 
         // since we added binary state type elements, all except the first have to be repeated but with the timestamp of
         // the following item
-        HistoryDataBean item0 = dto.data.get(0);
+        HistoryDataBean item0 = dto.data.getFirst();
         HistoryDataBean item1 = dto.data.get(1);
 
         assertEquals(item0.state, item1.state);
