@@ -94,9 +94,9 @@ public class EnrichedThingDTOMapperTest {
 
     private void assertChannels(EnrichedThingDTO enrichedThingDTO) {
         assertThat(enrichedThingDTO.channels, hasSize(2));
-        assertThat(enrichedThingDTO.channels.get(0), is(instanceOf(EnrichedChannelDTO.class)));
+        assertThat(enrichedThingDTO.channels.getFirst(), is(instanceOf(EnrichedChannelDTO.class)));
 
-        EnrichedChannelDTO channel1 = enrichedThingDTO.channels.get(0);
+        EnrichedChannelDTO channel1 = enrichedThingDTO.channels.getFirst();
         assertThat(channel1.linkedItems, hasSize(2));
     }
 
